# my-esp32

./: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  Makefile  README.md  sdkconfig.defaults
apps/app_home/include/: app_home.h
apps/app_home/src/: app_home.c
apps/app_notify/src/: app_notify.c
apps/app_satoshi_slot/: CMakeLists.txt
apps/app_satoshi_slot/include/: app_satoshi_slot.h
apps/app_satoshi_slot/src/: app_satoshi_slot.c
apps/app_trading/include/: app_trading.h
apps/app_trading/src/: app_trading.c
components/bsp_board/: CMakeLists.txt
components/bsp_board/include/: bsp_board.h  bsp_board_config.h  bsp_display.h  bsp_rtc.h  bsp_touch.h
components/bsp_board/src/: bsp_backlight.c  bsp_board.c  bsp_display.c  bsp_rtc.c  bsp_touch.c
components/core_app_manager/src/: app_manager.c
components/core_event_bus/: CMakeLists.txt
components/core_event_bus/src/: event_bus.c
components/core_system_state/: CMakeLists.txt
components/core_system_state/src/: system_state.c
components/core_types/src/: app_id.c
components/net_manager/: Kconfig
components/net_manager/include/: net_manager.h
components/net_manager/src/: net_manager.c
components/power_policy/: CMakeLists.txt
components/power_policy/include/: power_policy.h
components/power_policy/src/: power_policy.c
components/power_runtime/include/: power_runtime.h
components/power_runtime/src/: power_runtime.c
components/service_claude/: CMakeLists.txt
components/service_claude/include/: service_claude.h
components/service_claude/src/: service_claude.c
components/service_home/include/: service_home.h
components/service_home/src/: service_home.c
components/service_market/include/: service_market.h
components/service_market/src/: service_market.c
components/service_time/: CMakeLists.txt  Kconfig
components/service_time/include/: service_time.h
components/service_time/src/: service_time.c
components/service_weather/: CMakeLists.txt
components/service_weather/include/: service_weather.h
components/service_weather/src/: service_weather.c
docs/: 2025-04-06-dev-setup-guide.md  2025-04-06-esp32-dashboard-design.md  2026-04-07-app-manager-event-bus-subdesign.md  2026-04-07-claude-app-subdesign.md  2026-04-07-home-subdesign.md  2026-04-07-market-service-subdesign.md  2026-04-07-power-policy-subdesign.md  2026-04-07-satoshi-slot-subdesign.md  2026-04-07-time-service-subdesign.md  2026-04-07-trading-subdesign.md  README.md  plan.md
docs/design/: dashboard-design.md
docs/design/apps/: claude-app.md  home.md  satoshi-slot.md  trading.md
docs/design/services/: market-service.md  time-service.md  weather-service.md
docs/design/system/: app-manager-event-bus.md  power-policy.md
docs/hardware/: waveshare-board-baseline.md
docs/plan/: balatro-original.glsl  balatro-screensaver-cpu-plan.md  screensaver.glsl  wifi-credential-optimization.md
docs/plans/: 2026-04-09-audit-action-plan.md  project-progress-plan.md  unified-action-plan.md  weather-system-plan.md
docs/reports/: 2026-04-09-project-audit.md  2026-04-13-project-audit.md  commit_audit_a8ebcf0_cjk_font.md
docs/research/: .gitignore  notchi-analysis.md
main/: CMakeLists.txt  bootstrap.c  main.c
openspec/specs/device-link-atomicity/: spec.md
src/apps/app_home/: CMakeLists.txt
src/apps/app_home/include/: CLAUDE.md
src/apps/app_home/src/: app_home.c  home_approval.c  home_approval.h  home_internal.h  home_presenter.c  home_presenter.h  home_prompt.c  home_prompt.h  home_runtime.c  home_runtime.h  home_screensaver.c  home_screensaver.h  home_view.c  home_view.h  screensaver_balatro.c  screensaver_balatro.h  screensaver_direct.c  screensaver_direct.h  screensaver_renderer.c  screensaver_renderer.h
src/apps/app_notify/: CMakeLists.txt
src/apps/app_satoshi_slot/: CMakeLists.txt
src/apps/app_settings/: CMakeLists.txt
src/apps/app_trading/: CMakeLists.txt
src/apps/app_trading/src/: app_trading.c  trading_chart.c  trading_chart.h  trading_presenter.c  trading_presenter.h  trading_runtime.c  trading_runtime.h  trading_view.c  trading_view.h
src/components/bsp_board/: CMakeLists.txt
src/components/bsp_board/include/: bsp_display.h
src/components/bsp_board/src/: bsp_backlight.c  bsp_board.c  bsp_display.c  bsp_rtc.c  bsp_touch.c
src/components/core_app_manager/: CMakeLists.txt
src/components/device_link/: CMakeLists.txt
src/components/device_link/include/: device_link.h
src/components/device_link/src/: device_link.c
src/components/service_market/: CMakeLists.txt
src/components/service_market/include/: service_market.h
src/components/service_market/src/: market_feed.h  market_feed_gate.c  market_feed_okx.c  market_feed_rest.c  market_http.c  market_http.h  market_pair_math.h  market_stream_binance.c  market_stream_binance.h  market_symbols.c  market_symbols.h  service_market.c
src/components/service_weather/: CMakeLists.txt  Kconfig
src/components/service_weather/include/: service_weather.h
src/components/service_weather/src/: service_weather.c  weather_client.c  weather_client.h  weather_mapper.c  weather_mapper.h
src/components/ui_fonts/: CMakeLists.txt
src/components/ui_fonts/include/: ui_fonts.h
src/components/ui_fonts/src/: ui_fonts.c
src/main/: CMakeLists.txt  bootstrap.c  bootstrap.h  idf_component.yml
tools/: resolve_serial_port.sh  sprite_convert.py
tools/claude_bridge/: .rustfmt.toml  Cargo.toml  README.md
tools/claude_bridge/hooks/: claude-bridge-hook.sh
tools/claude_bridge/src/: daemon.rs  launchd.rs  main.rs  model.rs
tools/esp32dash/: .rustfmt.toml  Cargo.toml  README.md  build.rs  test_string_escape
tools/esp32dash/hooks/: esp32dash-hook.sh
tools/esp32dash/src/: agent.rs  approvals.rs  compat.rs  config.rs  config_ui.rs  device.rs  emotion.rs  emotion_state.rs  hooks.rs  launchd.rs  main.rs  model.rs  normalizer.rs  prompts.rs  text_sanitize.rs
tools/lv_font_pipeline/: .gitignore  README.md  anthropic_nocompress_tmp.c  anthropic_tmp.c  claude_nocompress_tmp.c  package-lock.json  package.json
(+86 files in other folders)
