[package]
name = "claude-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws", "json"] }
clap = { version = "4", features = ["derive", "env"] }
directories = "6"
futures-util = "0.3"
reqwest = { version = "0.13.2", default-features = false, features = [
  "json",
  "rustls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
