[package]
name = "esp32dash"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json"] }
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
dir_spec = "0.5.2"
inquire = "0.9.4"
libc = "0.2"
png = "0.18.1"
reqwest = { version = "0.13.3", default-features = false, features = [
    "json",
    "rustls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.9.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
