idf_component_register(
    SRCS
        "src/app_home.c"
        "src/screensaver_balatro.c"
        "src/generated/app_home_status_font.c"
        "src/generated/departure_mono_55.c"
        "src/generated/sprite_idle.c"
        "src/generated/sprite_working.c"
        "src/generated/sprite_waiting.c"
        "src/generated/sprite_sleeping.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        bsp_board
        core_app_manager
        device_link
        lvgl__lvgl
        service_home
        ui_fonts
)
