idf_component_register(
    SRCS
        "src/app_home.c"
        "src/home_approval.c"
        "src/home_prompt.c"
        "src/home_presenter.c"
        "src/home_runtime.c"
        "src/home_screensaver.c"
        "src/home_view.c"
        "src/screensaver_direct.c"
        "src/screensaver_renderer.c"
        "src/generated/app_home_status_font.c"
        "src/generated/departure_mono_55.c"
        "src/generated/sprite_idle.c"
        "src/generated/sprite_idle_happy.c"
        "src/generated/sprite_idle_sad.c"
        "src/generated/sprite_idle_sob.c"
        "src/generated/sprite_working.c"
        "src/generated/sprite_working_happy.c"
        "src/generated/sprite_working_sad.c"
        "src/generated/sprite_waiting.c"
        "src/generated/sprite_waiting_happy.c"
        "src/generated/sprite_waiting_sad.c"
        "src/generated/sprite_compacting.c"
        "src/generated/sprite_sleeping.c"
        "src/generated/sprite_sleeping_happy.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        bsp_board
        core_app_manager
        device_link
        lvgl__lvgl
        service_home
        ui_theme
        ui_fonts
)
