idf_component_register(
    SRCS
        "src/market_feed_gate.c"
        "src/market_http.c"
        "src/market_feed_rest.c"
        "src/market_stream_binance.c"
        "src/market_symbols.c"
        "src/service_market.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        core_types
        core_event_bus
        esp_http_client
        cjson
        mbedtls
        net_manager
        power_policy
        esp_timer
        esp_websocket_client
)
